--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
   Tienda Mística</title>
 
     
-
-    
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "so9m4i4icb");
+</script>
+    <script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-xcod-sck
+  data-utmify-prevent-subids
+  async
+  defer
+></script> 
 
 <meta property="og:site_name" content="Tienda Mística">
 <meta property="og:url" content="https://sabiduriaoculta.store/products/despierta">
