--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     <link rel="canonical" href="https://sabiduriaoculta.store/products/despierta"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin=""><title>
-      Sabiduría Oculta I & II: Las Claves del Nuevo Ser Humano
-  Tienda Mística</title>
+      Sabiduría Oculta</title>
 
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MFD7CN3Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F5MFD7CN3Z');
+</script>
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
